@@ -16,7 +16,10 @@ CHANGES - Current Version:
 
 - Modified TABGetBasename() (in mitab_utils.cpp) to stop at the first
   forward or backslash otherwise "C:/warmerda/mi\can_caps.tab" will result
-  in a basename of "mi\can_caps.tab".  
+  in a basename of "mi\can_caps.tab".   NFW
+
+- Modified datum list in mitab_spatialref.cpp with a bunch of new EPSG/OGC
+  datum names provided by Siro Martello from Cadcorp. NFW
 
 
 Version 1.2.2 - (2002-07-06)
@@ -470,5 +473,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.96 2002-08-28 14:19:22 warmerda Exp $
+$Id: HISTORY.TXT,v 1.97 2002-09-05 15:24:16 warmerda Exp $
 ------------
